--- a/djangogirls/blog/templates/blog/base.html
+++ b/djangogirls/blog/templates/blog/base.html
@@ -13,7 +13,7 @@
         </div>
         <div class="content container">
             <div class="row">
-                <div class="col-med-8">
+                <div class="col-md-8">
                     {% block content %}
                     {% endblock %}
                 </div>
